--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
     font-size: 14px;
-    color: white;
+    color: gray;
     background-color: white;
     margin: 0;
     padding: 0;
@@ -11,6 +11,20 @@ body {
 
 h1 {
   font-size: 100px;
+  text-decoration: none;
+  font-weight: normal;
+  text-align: center;
+}
+
+h2 {
+  font-size: 28px;
+  text-decoration: none;
+  font-weight: normal;
+  text-align: center;
+}
+
+h3 {
+  font-size: 18px;
   text-decoration: none;
   font-weight: normal;
   text-align: center;
@@ -38,33 +52,26 @@ tbody {
 
 td {
   height: 52px;
-  border-right: 57px solid black;
-  border-left: 57px solid black;
+  border-right: 57px solid #1a0000;
+  border-left: 57px solid #1a0000;
   font-size: 21px;
   width: auto;
-  background-color: black;
+  background-color: #1a0000;
 }
 
-/*#slideshow { 
-    margin: 50px auto; 
-    position: relative; 
-    width: 240px; 
-    height: 240px; 
-    padding: 10px; 
-    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+
+
+.mySlides {
+  display: none;
 }
 
-#slideshow > div { 
-    position: absolute; 
-    top: 10px; 
-    left: 10px; 
-    right: 10px; 
-    bottom: 10px; 
-}*/
+.purposecontainer {
+  width: 1000px;
+}
 
 #container {
   width: 600px;
-  height: 600px;
+  height: 615px;
   position: relative;
 }
 
@@ -83,9 +90,11 @@ td {
 #bio {
   position: absolute;
   color: black;
-  font-size: 24px;
-  left: 640px;
-  top: 0px;
+  font-size: 15px;
+  left: 620px;
+  top: 130px;
+  text-align: left;
+  width: 50%;
 }
 
 #role {
@@ -95,4 +104,5 @@ td {
   left: 620px;
   top: -20px;
   text-align: left;
+  width: fit-content;
 }
